Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -3006,11 +3006,11 @@
         "hour_df.info()"
       ],
       "metadata": {
-        "id": "PMf1jE0HRQJl",
-        "outputId": "d858ee97-3555-437b-e121-350d77706dff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PMf1jE0HRQJl",
+        "outputId": "d858ee97-3555-437b-e121-350d77706dff"
       },
       "execution_count": 54,
       "outputs": [
@@ -3050,11 +3050,11 @@
         "day_df.info()"
       ],
       "metadata": {
-        "id": "e_RiiHJhRT0B",
-        "outputId": "8fe57388-467b-42e3-8255-696e35407f72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e_RiiHJhRT0B",
+        "outputId": "8fe57388-467b-42e3-8255-696e35407f72"
       },
       "execution_count": 55,
       "outputs": [
@@ -3102,12 +3102,12 @@
         "hour_df.head()"
       ],
       "metadata": {
-        "id": "3_EhrN5sQliU",
-        "outputId": "38727edf-995a-4692-aa11-4a5c25c88331",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 791
-        }
+        },
+        "id": "3_EhrN5sQliU",
+        "outputId": "38727edf-995a-4692-aa11-4a5c25c88331"
       },
       "execution_count": 74,
       "outputs": [
@@ -3611,12 +3611,12 @@
         "day_df.head()"
       ],
       "metadata": {
-        "id": "cZB68gjPPgDe",
-        "outputId": "61be9ef9-f543-46e3-d3bc-14243964eb41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
-        }
+        },
+        "id": "cZB68gjPPgDe",
+        "outputId": "61be9ef9-f543-46e3-d3bc-14243964eb41"
       },
       "execution_count": 46,
       "outputs": [
@@ -3993,20 +3993,39 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "hJV81lV7Q1Ua"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "**Insight:**\n",
-        "- xxx\n",
-        "- xxx"
+        "\n",
+        "Dalam proyek ini, tahap pembersihan data melibatkan beberapa langkah penting yang memastikan data siap dan layak untuk analisis lebih lanjut :\n",
+        "\n",
+        "1. Kualitas Data Awal yang Baik\n",
+        "\n",
+        "Salah satu temuan awal yang positif dari tahap Assessing Data (yang mendahului cleaning) adalah tidak ditemukannya missing value maupun duplikasi data pada kedua dataset (day_df dan hour_df). Ini merupakan indikator kualitas data yang sangat baik sejak awal. Kurangnya data hilang berarti kita tidak perlu melakukan imputasi atau penghapusan baris/kolom yang signifikan, sehingga data asli dapat dipertahankan semaksimal mungkin. Absennya duplikasi memastikan bahwa setiap observasi adalah unik dan tidak ada penghitungan ganda yang dapat membiaskan hasil analisis. Insight ini memberikan kepercayaan diri bahwa data yang digunakan untuk analisis adalah data yang bersih dan utuh.\n",
+        "\n",
+        "2. Penghapusan Kolom yang Tidak Relevan:\n",
+        "\n",
+        "Sebagai bagian dari pembersihan, kolom 'instant' dan 'workingday' dihapus. Kolom 'instant' yang merupakan indeks urutan tidak memberikan nilai informatif untuk analisis pola penggunaan. Sementara itu, kolom 'workingday' dianggap memiliki informasi yang redundan karena sudah terwakili oleh kolom 'weekday' (hari dalam seminggu). Penghapusan kolom yang tidak relevan ini bertujuan untuk menyederhanakan dataset dan fokus pada variabel-variabel yang benar-benar berkontribusi pada pemahaman fenomena sewa sepeda. Ini membantu mengurangi noise dalam data dan mempercepat proses analisis.\n",
+        "\n",
+        "3. Konversi Tipe Data untuk Analisis yang Tepat:\n",
+        "\n",
+        "Beberapa kolom yang awalnya bertipe data numerik (integer) seperti season, year, month, weekday, dan weathersit diubah menjadi tipe data kategori (category). Meskipun direpresentasikan dengan angka (1, 2, 3, dst), nilai-nilai ini sebenarnya merepresentasikan label atau kelompok (misalnya, 1 untuk Musim Semi, 2 untuk Musim Panas, dst) dan bukan nilai kuantitatif yang dapat dihitung secara matematis (seperti rata-rata atau jumlah). Mengubahnya menjadi tipe kategori memastikan bahwa kolom-kolom ini diperlakukan dengan benar dalam analisis statistik dan visualisasi (misalnya, menggunakan bar plot daripada histogram), yang menghasilkan representasi data yang lebih akurat dan relevan secara kontekstual.\n",
+        "\n",
+        "Selain itu, kolom 'dteday' yang merepresentasikan tanggal dikonversi menjadi tipe data datetime. Konversi ini sangat krusial untuk memungkinkan analisis deret waktu dan ekstraksi fitur berbasis waktu (seperti nama hari, bulan, atau tahun), yang penting untuk memahami tren dan pola penggunaan sepeda berdasarkan waktu.\n",
+        "\n",
+        "4. Pengubahan Nama Kolom untuk Kejelasan:\n",
+        "\n",
+        "Nama beberapa kolom diubah menjadi lebih deskriptif dan mudah dipahami, seperti 'yr' menjadi 'year', 'mnth' menjadi 'month', 'dteday' menjadi 'date', 'weathersit' menjadi 'weather', 'cnt' menjadi 'total_rentals', 'casual' menjadi 'casual_users', dan 'registered' menjadi 'registered_users'. Perubahan nama ini meningkatkan keterbacaan kode dan dataset, memudahkan kolaborasi, dan mengurangi potensi kebingungan selama proses analisis.\n",
+        "\n",
+        "5. Penggantian Nilai Kategorikal dengan Label yang Mudah Dipahami:\n",
+        "\n",
+        "Nilai-nilai numerik dalam kolom kategori seperti season, month, weather, dan weekday diganti dengan label string yang lebih informatif (misalnya, 1 menjadi 'Spring', 2 menjadi 'Misty', 0 menjadi 'Sunday', dll.). Langkah ini membuat dataset jauh lebih mudah diinterpretasikan tanpa perlu merujuk kembali ke dokumentasi data asli untuk memahami makna setiap angka. Visualisasi yang dihasilkan juga akan secara langsung menampilkan label yang bermakna, meningkatkan pemahaman terhadap insight yang diperoleh.\n",
+        "\n",
+        "kesimpulannya\n",
+        "\n",
+        "- Tahap cleaning data berhasil menghasilkan dataset yang bersih, terstruktur, dan mudah dipahami. Kualitas data awal yang baik ditambah dengan langkah-langkah sistematis dalam penghapusan kolom, konversi tipe data, pengubahan nama, dan pelabelan nilai kategori memastikan bahwa data yang digunakan untuk analisis lebih lanjut akurat dan siap untuk menghasilkan insight yang valid.\n",
+        "\n",
+        "- Proses ini meminimalkan hambatan teknis dan memungkinkan fokus penuh pada eksplorasi dan penemuan pola dalam data penggunaan sepeda."
       ],
       "metadata": {
         "id": "Q_5ejIqckiSP"
@@ -5940,7 +5959,6 @@
       "cell_type": "markdown",
       "source": [
         "**Insight:**\n",
-        "- xxx\n",
         "- xxx"
       ],
       "metadata": {
