Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -16,7 +16,7 @@
         "id": "H9wADwK78DCz"
       },
       "source": [
-        "# Proyek Analisis Data: [Input Nama Dataset]\n",
+        "# Proyek Analisis Data: [Bike Sharing]\n",
         "- **Nama:** [Mutasar]\n",
         "- **Email:** [mutasarstmik@gmail.com]\n",
         "- **ID Dicoding:** [l319ywd083]"
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "zjCBk1BI8DC1",
         "colab": {
@@ -1298,7 +1298,7 @@
         },
         "outputId": "60dbdb6b-c613-4268-d2bd-413905e2d5d7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1370,7 +1370,7 @@
         "id": "0l71Qf8me0SJ",
         "outputId": "4a67ac1e-c4dc-4cd2-c0d4-60954c6ef836"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1504,7 +1504,7 @@
         "id": "xdcjjJa7HmiS",
         "outputId": "bd1c8c0e-a302-41ee-d352-7cef727c407e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1648,7 +1648,7 @@
         "id": "dD1WHhpgfE30",
         "outputId": "9a7613f2-52ae-478f-8630-93886faaa7a1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1684,7 +1684,7 @@
         "id": "Vk3fmVkefHh0",
         "outputId": "e0f3b922-57a8-4afe-9338-b40724e5cbe9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2159,7 +2159,7 @@
         "id": "zxKWqjjEfhB6",
         "outputId": "46b093d1-1dc7-4c68-dbe0-243b257a0977"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2660,7 +2660,7 @@
       "metadata": {
         "id": "iG1snS4wH8Bz"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2693,7 +2693,7 @@
       "metadata": {
         "id": "Uc-2BErGgs6D"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2717,7 +2717,7 @@
       "metadata": {
         "id": "H3HWH37tgycD"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2739,7 +2739,7 @@
       "metadata": {
         "id": "emCVbIYFg2uT"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2769,7 +2769,7 @@
       "metadata": {
         "id": "-KUh3exXh9D-"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2798,7 +2798,7 @@
       "metadata": {
         "id": "f5y4cFK0Iy5p"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2814,7 +2814,7 @@
       "metadata": {
         "id": "iAbXg58ZUM8J"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2830,7 +2830,7 @@
       "metadata": {
         "id": "rRkZ-CbhUOqP"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2857,7 +2857,7 @@
       "metadata": {
         "id": "V3eLiAh1lJO_"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2873,7 +2873,7 @@
       "metadata": {
         "id": "BOEJYwMYPWJG"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2889,7 +2889,7 @@
       "metadata": {
         "id": "5_JsCZaslVPV"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2904,7 +2904,7 @@
       "metadata": {
         "id": "Cqf7sHqMU5pL"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2927,7 +2927,7 @@
       "metadata": {
         "id": "tbXPMwPMmgMf"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2950,7 +2950,7 @@
       "metadata": {
         "id": "v2Q_MT7tVD_5"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2963,7 +2963,7 @@
       "metadata": {
         "id": "np5XB0sPmDEy"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2997,7 +2997,7 @@
       "metadata": {
         "id": "Jk3tlSXeTeli"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3012,7 +3012,7 @@
         "id": "PMf1jE0HRQJl",
         "outputId": "d858ee97-3555-437b-e121-350d77706dff"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3056,7 +3056,7 @@
         "id": "e_RiiHJhRT0B",
         "outputId": "8fe57388-467b-42e3-8255-696e35407f72"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3109,7 +3109,7 @@
         "id": "3_EhrN5sQliU",
         "outputId": "38727edf-995a-4692-aa11-4a5c25c88331"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3618,7 +3618,7 @@
         "id": "cZB68gjPPgDe",
         "outputId": "61be9ef9-f543-46e3-d3bc-14243964eb41"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4072,7 +4072,7 @@
         "id": "c6-F1hp1ri3j",
         "outputId": "3cae04a2-868f-46c4-d459-8b5fab9cd3a8"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4602,7 +4602,7 @@
         "id": "Xqkbjh8Drw1E",
         "outputId": "7d986808-adc6-410a-856a-5567948fe293"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5024,7 +5024,7 @@
         "id": "hHDPZushpoRE",
         "outputId": "4770f291-9131-4057-a939-0181d442416a"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5542,7 +5542,7 @@
         "id": "C1RxB-eUp1TT",
         "outputId": "2db3b4b2-6f1f-4e96-c82e-4a6a1c64af5b"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5884,7 +5884,7 @@
         "id": "sJ3X_IY7r3GH",
         "outputId": "294f9957-79ba-4488-f909-098b1816087c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5938,7 +5938,7 @@
         "id": "sUaCVJ4FsCVY",
         "outputId": "b4797f1e-6733-4ec5-8072-8db50a7ed2d4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5969,7 +5969,7 @@
           "height": 175
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6273,7 +6273,7 @@
           "height": 175
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6580,7 +6580,7 @@
           "height": 175
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6890,7 +6890,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6943,7 +6943,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7008,12 +7008,12 @@
       "metadata": {
         "id": "g5J4QHs6fM5u"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "id": "1swJUdAD8DC2",
         "colab": {
@@ -7069,7 +7069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "Go0lCsvO8DC2",
         "colab": {
