Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -2667,6 +2667,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# kita akan menghapus kolom instant dan workingday. untuk workingday menurut saya sudah diwakili oleh weekday, dan untuk instant tidak anda hubungan\n",
+        "day_df.drop(['instant', 'workingday'], axis = 1, inplace= True, errors='ignore')"
+      ],
+      "metadata": {
+        "id": "vXV93DZT2T3H"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "menghapus kolom instant dan workingday. untuk workingday menurut saya sudah diwakili oleh weekday, dan untuk instant tidak ada hubungannya"
