--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -2660,19 +2660,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# kita akan menghapus kolom instant dan workingday. untuk workingday menurut saya sudah diwakili oleh weekday, dan untuk instant tidak ada hubungannya\n",
-        "hour_df.drop(['instant', 'workingday'], axis = 1, inplace= True, errors='ignore')\n",
-        "day_df.drop(['instant', 'workingday'], axis = 1, inplace= True, errors='ignore')"
-      ],
-      "metadata": {
-        "id": "iG1snS4wH8Bz"
-      },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# kita akan menghapus kolom instant dan workingday. untuk workingday menurut saya sudah diwakili oleh weekday, dan untuk instant tidak anda hubungan\n",
         "day_df.drop(['instant', 'workingday'], axis = 1, inplace= True, errors='ignore')"
       ],
@@ -2681,6 +2668,105 @@
       },
       "execution_count": 29,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# kita akan menghapus kolom instant dan workingday. untuk workingday menurut saya sudah diwakili oleh weekday, dan untuk instant tidak anda hubungan\n",
+        "hour_df.drop(['instant', 'workingday'], axis = 1, inplace= True, errors='ignore')\n"
+      ],
+      "metadata": {
+        "id": "CrZQxmVWM0Pf"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "day_df.info()"
+      ],
+      "metadata": {
+        "id": "bvYWUA9oNfDR",
+        "outputId": "757a77f8-341a-4bd2-bcf3-a3e1b51feadf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 731 entries, 0 to 730\n",
+            "Data columns (total 14 columns):\n",
+            " #   Column            Non-Null Count  Dtype         \n",
+            "---  ------            --------------  -----         \n",
+            " 0   date              731 non-null    datetime64[ns]\n",
+            " 1   season            731 non-null    category      \n",
+            " 2   year              731 non-null    category      \n",
+            " 3   month             731 non-null    category      \n",
+            " 4   holiday           731 non-null    int64         \n",
+            " 5   weekday           731 non-null    object        \n",
+            " 6   weather           731 non-null    category      \n",
+            " 7   temp              731 non-null    float64       \n",
+            " 8   atemp             731 non-null    float64       \n",
+            " 9   hum               731 non-null    float64       \n",
+            " 10  windspeed         731 non-null    float64       \n",
+            " 11  casual_users      731 non-null    int64         \n",
+            " 12  registered_users  731 non-null    int64         \n",
+            " 13  total_rentals     731 non-null    int64         \n",
+            "dtypes: category(4), datetime64[ns](1), float64(4), int64(4), object(1)\n",
+            "memory usage: 60.9+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hour_df.info()"
+      ],
+      "metadata": {
+        "id": "YCEj-4pNM4oo",
+        "outputId": "6a90b8c2-bf5f-4c1d-facd-36e69666e578",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17379 entries, 0 to 17378\n",
+            "Data columns (total 15 columns):\n",
+            " #   Column            Non-Null Count  Dtype         \n",
+            "---  ------            --------------  -----         \n",
+            " 0   date              17379 non-null  datetime64[ns]\n",
+            " 1   season            731 non-null    category      \n",
+            " 2   year              17379 non-null  category      \n",
+            " 3   month             731 non-null    category      \n",
+            " 4   hr                17379 non-null  int64         \n",
+            " 5   holiday           17379 non-null  int64         \n",
+            " 6   weekday           17379 non-null  object        \n",
+            " 7   weather           17379 non-null  category      \n",
+            " 8   temp              17379 non-null  float64       \n",
+            " 9   atemp             17379 non-null  float64       \n",
+            " 10  hum               17379 non-null  float64       \n",
+            " 11  windspeed         17379 non-null  float64       \n",
+            " 12  casual_users      17379 non-null  int64         \n",
+            " 13  registered_users  17379 non-null  int64         \n",
+            " 14  total_rentals     17379 non-null  int64         \n",
+            "dtypes: category(4), datetime64[ns](1), float64(4), int64(5), object(1)\n",
+            "memory usage: 1.5+ MB\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -7015,11 +7101,11 @@
       ],
       "metadata": {
         "id": "iWhnzsJGYUCO",
-        "outputId": "732bb7af-73c3-4e1d-b309-c67e2bd30ac6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 557
-        }
+        },
+        "outputId": "732bb7af-73c3-4e1d-b309-c67e2bd30ac6"
       },
       "execution_count": 61,
       "outputs": [
@@ -7045,10 +7131,10 @@
       ],
       "metadata": {
         "id": "r8gumW7E01Ba",
-        "outputId": "638ca2e0-91e7-4394-9d81-d38b0ed894b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "638ca2e0-91e7-4394-9d81-d38b0ed894b7"
       },
       "execution_count": 62,
       "outputs": [
@@ -7085,10 +7171,10 @@
       ],
       "metadata": {
         "id": "6kzG3zRB1KcD",
-        "outputId": "f9c0424b-e176-4a9a-d065-a6c74b821ca1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f9c0424b-e176-4a9a-d065-a6c74b821ca1"
       },
       "execution_count": 63,
       "outputs": [
@@ -7141,11 +7227,11 @@
       ],
       "metadata": {
         "id": "BeSuKPpq13yJ",
-        "outputId": "a6e1cd87-6ab2-4080-c14b-17788c07ff3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 495
-        }
+        },
+        "outputId": "a6e1cd87-6ab2-4080-c14b-17788c07ff3c"
       },
       "execution_count": 64,
       "outputs": [
@@ -7237,11 +7323,11 @@
       ],
       "metadata": {
         "id": "GsNnLZBI3ctF",
-        "outputId": "04dce2a2-156e-46c8-b38e-109c2b7e266f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "outputId": "04dce2a2-156e-46c8-b38e-109c2b7e266f"
       },
       "execution_count": 66,
       "outputs": [
