Dibuat menggunakan Colab

--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -2687,11 +2687,11 @@
         "day_df.info()"
       ],
       "metadata": {
-        "id": "bvYWUA9oNfDR",
-        "outputId": "757a77f8-341a-4bd2-bcf3-a3e1b51feadf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bvYWUA9oNfDR",
+        "outputId": "757a77f8-341a-4bd2-bcf3-a3e1b51feadf"
       },
       "execution_count": 75,
       "outputs": [
@@ -2730,11 +2730,11 @@
         "hour_df.info()"
       ],
       "metadata": {
-        "id": "YCEj-4pNM4oo",
-        "outputId": "6a90b8c2-bf5f-4c1d-facd-36e69666e578",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YCEj-4pNM4oo",
+        "outputId": "6a90b8c2-bf5f-4c1d-facd-36e69666e578"
       },
       "execution_count": 74,
       "outputs": [
@@ -7125,18 +7125,18 @@
       "cell_type": "code",
       "source": [
         "# Rata-rata sewa harian per musim\n",
-        "avg_rentals_per_season = day_df.groupby('season')['total_rentals'].mean().reset_index()\n",
+        "avg_rentals_per_season = day_df.groupby('season', observed=True)['total_rentals'].mean().reset_index()\n",
         "print(\"Rata-rata Sewa Harian per Musim:\")\n",
-        "print(avg_rentals_per_season)\n"
+        "print(avg_rentals_per_season)"
       ],
       "metadata": {
         "id": "r8gumW7E01Ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "638ca2e0-91e7-4394-9d81-d38b0ed894b7"
+        "outputId": "414cfced-e46b-44de-88e3-8604f4f7cef8"
       },
-      "execution_count": 62,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
@@ -7148,14 +7148,6 @@
             "1  Summer    4992.331522\n",
             "2    Fall    5644.303191\n",
             "3  Winter    4728.162921\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-62-e4aad20d51e6>:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-            "  avg_rentals_per_season = day_df.groupby('season')['total_rentals'].mean().reset_index()\n"
           ]
         }
       ]
